@@ -1,3 +1,7 @@
+2010-07-11  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed IMDb fetching of audio track and color (Bug: 244159).
+
 2010-07-10  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed metadata import for file listing.
